@@ -19,6 +19,13 @@
 ################################################################
 
 
+2013-08-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.99999922 released.
+
+        * Plan Expiration is complete.
+
+
 2013-08-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.99999921 released.
